Se arega menu lateral y funcionalidad basica con javascript

--- a/index.html
+++ b/index.html
@@ -20,10 +20,15 @@
         <div id="bar2" class="bars"></div>
         <div id="bar3" class="bars"></div>
     </label>
-  </div>
-  >
-  
-  
-  <script src="script.js"></script>
+</div>
+
+<!-- Menú desplegable -->
+<ul class="menu">
+    <li><a href="#opcion1">Opción 1</a></li>
+    <li><a href="#opcion2">Opción 2</a></li>
+    <li><a href="#opcion3">Opción 3</a></li>
+</ul>
+
+<script src="script.js"></script>
 </body>
 </html>
